[gd_scene load_steps=3 format=3 uid="uid://bpgiibe3coqhx"]

[ext_resource type="Script" path="res://ui/overlays/hud_ui.gd" id="1_pii4w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tm7wb"]
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="HudUI" type="CanvasLayer"]
script = ExtResource("1_pii4w")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TimeLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.254902, 0.14902, 0.196078, 1)
theme_override_constants/outline_size = 6
text = "0:00"

[node name="DifficultyLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.254902, 0.14902, 0.196078, 1)
theme_override_constants/outline_size = 6
text = "1"

[node name="ExperienceContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ExperienceLevelContainer" type="HBoxContainer" parent="MarginContainer/ExperienceContainer"]
layout_mode = 2

[node name="ExperienceLabel" type="Label" parent="MarginContainer/ExperienceContainer/ExperienceLevelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.701961)
theme_override_colors/font_outline_color = Color(0.254902, 0.14902, 0.196078, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "0"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/ExperienceContainer/ExperienceLevelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelLabel" type="Label" parent="MarginContainer/ExperienceContainer/ExperienceLevelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0.254902, 0.14902, 0.196078, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ExperienceBar" type="ProgressBar" parent="MarginContainer/ExperienceContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_tm7wb")
max_value = 1.0
value = 0.5
show_percentage = false
